--- a/settings.html
+++ b/settings.html
@@ -389,6 +389,130 @@
       border-top: 2px solid #E2E8F0;
     }
 
+    /* Session Cards */
+    .sessions-container {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    .session-card {
+      background: #F8FAFC;
+      border: 2px solid #E2E8F0;
+      border-radius: 12px;
+      padding: 1.5rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 1rem;
+      transition: all 0.3s;
+    }
+
+    .session-card:hover {
+      border-color: #CBD5E1;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+    }
+
+    .session-card.current-session {
+      background: linear-gradient(135deg, rgba(79, 70, 229, 0.05), rgba(124, 58, 237, 0.05));
+      border-color: #4F46E5;
+    }
+
+    .session-info {
+      flex: 1;
+    }
+
+    .session-device {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+      margin-bottom: 0.75rem;
+    }
+
+    .session-device i {
+      font-size: 1.5rem;
+      color: #4F46E5;
+    }
+
+    .session-device strong {
+      font-size: 1.125rem;
+      color: #1E293B;
+    }
+
+    .current-badge {
+      display: inline-block;
+      background: #4F46E5;
+      color: white;
+      padding: 0.25rem 0.75rem;
+      border-radius: 12px;
+      font-size: 0.75rem;
+      font-weight: 700;
+      margin-left: 0.5rem;
+    }
+
+    .session-details {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1.5rem;
+    }
+
+    .session-detail {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      color: #64748B;
+      font-size: 0.875rem;
+    }
+
+    .session-detail i {
+      font-size: 0.875rem;
+    }
+
+    .session-actions {
+      display: flex;
+      gap: 0.5rem;
+    }
+
+    .session-btn {
+      padding: 0.75rem 1.5rem;
+      border: none;
+      border-radius: 8px;
+      font-weight: 600;
+      font-size: 0.875rem;
+      cursor: pointer;
+      transition: all 0.2s;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+    }
+
+    .revoke-btn {
+      background: #FEE2E2;
+      color: #DC2626;
+      border: 1px solid #FCA5A5;
+    }
+
+    .revoke-btn:hover {
+      background: #FCA5A5;
+      transform: translateY(-2px);
+    }
+
+    .current-btn {
+      background: #E0E7FF;
+      color: #4F46E5;
+      cursor: default;
+    }
+
+    .revoke-all-btn {
+      margin-top: 1rem;
+      background: #DC2626;
+      color: white;
+    }
+
+    .revoke-all-btn:hover {
+      background: #B91C1C;
+    }
+
     /* Responsive */
     @media (max-width: 768px) {
       .sidebar {
@@ -577,11 +701,29 @@
       </form>
     </div>
 
+    <!-- Active Sessions -->
+    <div class="settings-section">
+      <h2><i class="fas fa-laptop"></i> Active Sessions</h2>
+      <p class="section-description">Manage devices that are signed into your account. Sign out any sessions you don't recognize.</p>
+
+      <div id="sessions-container" class="sessions-container">
+        <!-- Sessions loaded dynamically -->
+      </div>
+
+      <div id="session-message" class="message"></div>
+
+      <button class="btn revoke-all-btn" onclick="SessionManager.revokeAllSessions('sessions-container')" style="margin-top: 1.5rem;">
+        <i class="fas fa-sign-out-alt"></i>
+        Sign Out All Other Devices
+      </button>
+    </div>
+
   </div>
 
   <script src="js/auth.js"></script>
   <script src="js/password-validator.js"></script>
   <script src="js/password-reset.js"></script>
+  <script src="js/sessions.js"></script>
   <script>
     // Ensure user is authenticated
     requireAuth();
@@ -678,6 +820,11 @@
         logout();
       }
     });
+
+    // ==========================================
+    // LOAD ACTIVE SESSIONS
+    // ==========================================
+    SessionManager.loadSessions('sessions-container');
   </script>
 </body>
 </html>
