--- a/login.html
+++ b/login.html
@@ -110,6 +110,36 @@
       box-shadow: 0 0 0 4px rgba(79, 70, 229, 0.1);
     }
 
+    /* Password Input Wrapper with Eye Toggle */
+    .password-input-wrapper {
+      position: relative;
+    }
+
+    .password-input-wrapper input {
+      padding-right: 3rem;
+    }
+
+    .password-toggle {
+      position: absolute;
+      right: 1rem;
+      top: 50%;
+      transform: translateY(-50%);
+      background: none;
+      border: none;
+      color: #64748B;
+      cursor: pointer;
+      font-size: 1.125rem;
+      padding: 0.5rem;
+      transition: color 0.2s;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .password-toggle:hover {
+      color: #4F46E5;
+    }
+
     .btn {
       width: 100%;
       padding: 1rem;
@@ -221,7 +251,12 @@
 
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" id="password" required autocomplete="current-password">
+        <div class="password-input-wrapper">
+          <input type="password" id="password" required autocomplete="current-password">
+          <button type="button" class="password-toggle" onclick="togglePassword('password', this)">
+            <i class="fas fa-eye"></i>
+          </button>
+        </div>
       </div>
 
       <button type="submit" class="btn" id="loginBtn">
@@ -239,6 +274,24 @@
 
   <script>
     const API_BASE = window.location.hostname === 'localhost' ? 'http://localhost:3000' : '';
+
+    // ==========================================
+    // PASSWORD VISIBILITY TOGGLE
+    // ==========================================
+    function togglePassword(inputId, button) {
+      const input = document.getElementById(inputId);
+      const icon = button.querySelector('i');
+      
+      if (input.type === 'password') {
+        input.type = 'text';
+        icon.classList.remove('fa-eye');
+        icon.classList.add('fa-eye-slash');
+      } else {
+        input.type = 'password';
+        icon.classList.remove('fa-eye-slash');
+        icon.classList.add('fa-eye');
+      }
+    }
 
     // Check if already logged in
     const existingToken = localStorage.getItem('biztrack-auth-token');
