--- a/settings.html
+++ b/settings.html
@@ -214,6 +214,37 @@
       font-size: 0.875rem;
     }
 
+    /* Password Input Wrapper with Eye Toggle */
+    .password-input-wrapper {
+      position: relative;
+      max-width: 600px;
+    }
+
+    .password-input-wrapper input {
+      padding-right: 3rem;
+    }
+
+    .password-toggle {
+      position: absolute;
+      right: 1rem;
+      top: 50%;
+      transform: translateY(-50%);
+      background: none;
+      border: none;
+      color: #64748B;
+      cursor: pointer;
+      font-size: 1.125rem;
+      padding: 0.5rem;
+      transition: color 0.2s;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .password-toggle:hover {
+      color: #4F46E5;
+    }
+
     /* Toggle Switch */
     .toggle-container {
       display: flex;
@@ -577,16 +608,31 @@
       <form id="password-reset-form">
         <div class="form-group">
           <label for="current-password">Current Password</label>
-          <input type="password" id="current-password" placeholder="Enter current password" required>
+          <div class="password-input-wrapper">
+            <input type="password" id="current-password" placeholder="Enter current password" required>
+            <button type="button" class="password-toggle" onclick="togglePassword('current-password', this)">
+              <i class="fas fa-eye"></i>
+            </button>
+          </div>
         </div>
         <div class="form-group">
           <label for="new-password">New Password</label>
-          <input type="password" id="new-password" placeholder="Enter new password" required>
+          <div class="password-input-wrapper">
+            <input type="password" id="new-password" placeholder="Enter new password" required>
+            <button type="button" class="password-toggle" onclick="togglePassword('new-password', this)">
+              <i class="fas fa-eye"></i>
+            </button>
+          </div>
           <div id="password-feedback"></div>
         </div>
         <div class="form-group">
           <label for="confirm-password">Confirm New Password</label>
-          <input type="password" id="confirm-password" placeholder="Confirm new password" required>
+          <div class="password-input-wrapper">
+            <input type="password" id="confirm-password" placeholder="Confirm new password" required>
+            <button type="button" class="password-toggle" onclick="togglePassword('confirm-password', this)">
+              <i class="fas fa-eye"></i>
+            </button>
+          </div>
           <div id="password-match"></div>
         </div>
         <button type="submit" class="btn" id="password-submit-btn">
@@ -725,6 +771,24 @@
   <script src="js/password-reset.js"></script>
   <script src="js/sessions.js"></script>
   <script>
+    // ==========================================
+    // PASSWORD VISIBILITY TOGGLE
+    // ==========================================
+    function togglePassword(inputId, button) {
+      const input = document.getElementById(inputId);
+      const icon = button.querySelector('i');
+      
+      if (input.type === 'password') {
+        input.type = 'text';
+        icon.classList.remove('fa-eye');
+        icon.classList.add('fa-eye-slash');
+      } else {
+        input.type = 'password';
+        icon.classList.remove('fa-eye-slash');
+        icon.classList.add('fa-eye');
+      }
+    }
+
     // Ensure user is authenticated
     requireAuth();
 
