--- a/pharma-dashboard.html
+++ b/pharma-dashboard.html
@@ -892,7 +892,7 @@
 
   <!-- Scripts -->
   <script src="js/auth.js"></script>
-  <script src="js/SI-sidebar.js"></script>
+  <script src="js/pharma-sidebar.js"></script>
   
   <script>
     requireAuth();
