--- a/pharma-dashboard.html
+++ b/pharma-dashboard.html
@@ -957,7 +957,7 @@
       const selected = document.querySelector('input[name="quick-action"]:checked');
       
       if (selected.value === 'generate') {
-        window.location.href = '/generate.html';
+        window.location.href = '/pharma-generate.html';
       } else if (selected.value === 'receive') {
         window.location.href = '/pharma/receive.html';
       } else if (selected.value === 'verify') {
