--- a/verify.html
+++ b/verify.html
@@ -159,12 +159,12 @@
       margin-bottom: 1rem;
     }
 
-    .verify-landing > p {
-      font-size: 1.25rem;
-      color: rgba(255, 255, 255, 0.95);
-      margin-bottom: 3rem;
-      line-height: 1.8;
-    }
+    .verify-landing-content > p {
+  font-size: 1.25rem;
+  color: white;
+  margin-bottom: 3rem;
+  line-height: 1.8;
+}
 
     .scan-instructions {
       background: white;
