--- a/index.html
+++ b/index.html
@@ -3,12 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>For Businesses - BizTrack</title>
+  <title>BizTrack - Blockchain Product Verification & Supply Chain Tracking</title>
+  
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Blockchain-powered product verification and supply chain tracking. Give your customers confidence with tamper-proof QR codes backed by XRPL.">
+  <meta name="keywords" content="supply chain, blockchain, product verification, QR codes, XRPL, DSCSA, pharmaceutical tracking, inventory management">
+  
+  <!-- Open Graph / Social Sharing -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.biztrack.io/">
+  <meta property="og:title" content="BizTrack - Blockchain Product Verification">
+  <meta property="og:description" content="Blockchain-powered product verification and supply chain tracking. Give your customers confidence with tamper-proof QR codes.">
+  <meta property="og:image" content="https://www.biztrack.io/images/og-image.png">
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="BizTrack - Blockchain Product Verification">
+  <meta name="twitter:description" content="Blockchain-powered product verification and supply chain tracking. Tamper-proof QR codes backed by XRPL.">
+  <meta name="twitter:image" content="https://www.biztrack.io/images/og-image.png">
+  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
     * {
       margin: 0;
       padding: 0;
