--- a/pricing.html
+++ b/pricing.html
@@ -310,6 +310,8 @@
       border-radius: 12px;
       padding: 1.5rem;
       text-align: center;
+      display: flex;
+      flex-direction: column;
     }
 
     .manage-card h4 {
@@ -328,6 +330,7 @@
       font-size: 0.95rem;
       margin-bottom: 1rem;
       line-height: 1.6;
+      flex-grow: 1;
     }
 
     .manage-card button {
