--- a/pricing.html
+++ b/pricing.html
@@ -330,7 +330,6 @@
       font-size: 0.95rem;
       margin-bottom: 1rem;
       line-height: 1.6;
-      flex-grow: 1;
     }
 
     .manage-card button {
@@ -639,22 +638,26 @@
           <div class="manage-card promo">
             <h4><i class="fas fa-gift"></i> Have a Promo Code?</h4>
             <p>Enter your code to unlock bonus QR codes for this month.</p>
-            <div style="display: flex; gap: 0.5rem; margin-bottom: 0.5rem;">
-              <input type="text" id="promoCodeInput" placeholder="Enter code" maxlength="30" style="flex: 1; padding: 0.625rem 1rem; border: 2px solid #E2E8F0; border-radius: 8px; font-size: 0.95rem; text-transform: uppercase; font-family: 'Inter', sans-serif;" />
-              <button onclick="redeemPromoCode()" id="redeemPromoBtn">
-                <i class="fas fa-check"></i> Redeem
-              </button>
+            <div style="margin-top: auto;">
+              <div style="display: flex; gap: 0.5rem; margin-bottom: 0.5rem;">
+                <input type="text" id="promoCodeInput" placeholder="Enter code" maxlength="30" style="flex: 1; padding: 0.625rem 1rem; border: 2px solid #E2E8F0; border-radius: 8px; font-size: 0.95rem; text-transform: uppercase; font-family: 'Inter', sans-serif;" />
+                <button onclick="redeemPromoCode()" id="redeemPromoBtn">
+                  <i class="fas fa-check"></i> Redeem
+                </button>
+              </div>
+              <div id="promoMessage" style="font-size: 0.875rem; min-height: 1.25rem;"></div>
             </div>
-            <div id="promoMessage" style="font-size: 0.875rem; min-height: 1.25rem;"></div>
           </div>
 
           <!-- Cancel Card -->
           <div class="manage-card cancel">
             <h4><i class="fas fa-times-circle"></i> Need to Cancel?</h4>
             <p>Your subscription will remain active until the end of your billing period.</p>
-            <button onclick="showCancelModal()">
-              <i class="fas fa-times-circle"></i> Cancel Subscription
-            </button>
+            <div style="margin-top: auto;">
+              <button onclick="showCancelModal()">
+                <i class="fas fa-times-circle"></i> Cancel Subscription
+              </button>
+            </div>
           </div>
 
         </div>
