--- a/pricing.html
+++ b/pricing.html
@@ -302,6 +302,7 @@
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
       gap: 1.5rem;
       margin-top: 1.5rem;
+      align-items: stretch;
     }
 
     .manage-card {
@@ -312,6 +313,7 @@
       text-align: center;
       display: flex;
       flex-direction: column;
+      height: 100%;
     }
 
     .manage-card h4 {
