--- a/pricing.html
+++ b/pricing.html
@@ -640,7 +640,7 @@
           <div class="manage-card promo">
             <h4><i class="fas fa-gift"></i> Have a Promo Code?</h4>
             <p>Enter your code to unlock bonus QR codes for this month.</p>
-            <div style="margin-top: auto;">
+            <div style="padding-top: 1.5rem;">
               <div style="display: flex; gap: 0.5rem; margin-bottom: 0.5rem;">
                 <input type="text" id="promoCodeInput" placeholder="Enter code" maxlength="30" style="flex: 1; padding: 0.625rem 1rem; border: 2px solid #E2E8F0; border-radius: 8px; font-size: 0.95rem; text-transform: uppercase; font-family: 'Inter', sans-serif;" />
                 <button onclick="redeemPromoCode()" id="redeemPromoBtn">
