--- a/pricing.html
+++ b/pricing.html
@@ -637,10 +637,10 @@
         <div class="manage-grid">
           
           <!-- Promo Code Card -->
-          <div class="manage-card promo">
+          <div class="manage-card promo" style="min-height: 200px; position: relative; padding-bottom: 70px;">
             <h4><i class="fas fa-gift"></i> Have a Promo Code?</h4>
             <p>Enter your code to unlock bonus QR codes for this month.</p>
-            <div style="padding-top: 1.5rem;">
+            <div style="position: absolute; bottom: 1.5rem; left: 1.5rem; right: 1.5rem;">
               <div style="display: flex; gap: 0.5rem; margin-bottom: 0.5rem;">
                 <input type="text" id="promoCodeInput" placeholder="Enter code" maxlength="30" style="flex: 1; padding: 0.625rem 1rem; border: 2px solid #E2E8F0; border-radius: 8px; font-size: 0.95rem; text-transform: uppercase; font-family: 'Inter', sans-serif;" />
                 <button onclick="redeemPromoCode()" id="redeemPromoBtn">
@@ -652,11 +652,11 @@
           </div>
 
           <!-- Cancel Card -->
-          <div class="manage-card cancel">
+          <div class="manage-card cancel" style="min-height: 200px; position: relative; padding-bottom: 70px;">
             <h4><i class="fas fa-times-circle"></i> Need to Cancel?</h4>
             <p>Your subscription will remain active until the end of your billing period.</p>
-            <div style="margin-top: auto;">
-              <button onclick="showCancelModal()">
+            <div style="position: absolute; bottom: 1.5rem; left: 1.5rem; right: 1.5rem;">
+              <button onclick="showCancelModal()" style="width: 100%;">
                 <i class="fas fa-times-circle"></i> Cancel Subscription
               </button>
             </div>
