--- a/pricing.html
+++ b/pricing.html
@@ -667,8 +667,12 @@
 
       <!-- Footer -->
       <div class="pricing-footer">
-        All plans include: Blockchain verification, IPFS storage, and QR code generation<br>
-        Questions? <a href="/cdn-cgi/l/email-protection#b8d1d6ded7f8dad1c2cccad9dbd396d1d7">Contact our team</a>
+        All plans include: Blockchain verification, IPFS storage, and QR code generation<br><br>
+        <strong>Questions? Let's Talk</strong><br>
+        <span style="color: #64748B;">Our team is here to help you find the perfect plan for your business</span><br><br>
+        <a href="mailto:info@biztrack.io" style="margin-right: 1.5rem;"><i class="fas fa-envelope" style="margin-right: 0.5rem;"></i>info@biztrack.io</a>
+        <a href="tel:+13606700852"><i class="fas fa-phone" style="margin-right: 0.5rem;"></i>(360) 670-0852</a><br>
+        <span style="font-size: 0.85rem; color: #94A3B8;">Hours: 7 AM – 5 PM Pacific, Mon–Fri</span>
       </div>
 
     </div>
