--- a/production.html
+++ b/production.html
@@ -234,6 +234,7 @@
       justify-content: space-between;
       align-items: flex-start;
       margin-bottom: 0.5rem;
+      padding-right: 2rem; /* Make room for delete button */
     }
     .timeline-who {
       font-weight: 600;
